--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: mdijkgraaf@princeton.edu
 description: > # this means to ignore newlines until "baseurl:"
   Bring Hackathons, Maker Faires and Design Thinking to your students.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://ignitestem.com" # the base hostname & protocol for your site
+url: "http://ignitestem.org" # the base hostname & protocol for your site
 twitter_username: ignite_stem
 facebook_username: igniteSTEM
 
